# chplx

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Singularity.def  THANKS  bench-gups-run.sh  bench-gups.bash  bench-run.sh  bench-triad-run.sh  bench-triad.bash  bench.bash  benchmark.py  build-heat.sh  chapel-1.33.0-frontend.patch  chapel-2.3.0-frontend.patch  compare-results.py  docker-run.sh  install-fmt.sh  install-hpx.sh  sbatch.sh  singularity-run.sh  update_good_files.sh
.github/workflows/: linux-build-with-script.yml  linux-build.yml  linux_debug.yml  linux_release.yml
backend/: CMakeLists.txt  README.md
backend/cmake/: CHPLX_Compile.cmake  CompareFiles.cmake  FindClangFormat.cmake
backend/include/: ErrorGuard.h  getopt.h
backend/include/hpx/: cmakegen.hpp  codegenvisitor.hpp  programtree.hpp  programtreebuildingvisitor.hpp  symbolbuildingvisitor.hpp  symbols.hpp  symboltypes.hpp  util.hpp  utils.hpp  visitor.hpp
backend/src/: cmakegen.cpp  codegenvisitor.cpp  driver.cpp  getopt.c  programtree.cpp  programtreebuildingvisitor.cpp  symbolbuildingvisitor.cpp  symboltypes.cpp  util.cpp  utils.cpp  visitor.cpp
backend/src/symbolbuilding/: array.cpp  boolliteral.cpp  bytesliteral.cpp  domain.cpp  identifier.cpp  imagliteral.cpp  intliteral.cpp  range.cpp  realliteral.cpp
backend/src/symbolbuilding/enter/: block.cpp  boolliteral.cpp  bracketloop.cpp  class.cpp  coforall.cpp  conditional.cpp  cstringliteral.cpp  fncall.cpp  for.cpp  forall.cpp  formal.cpp  function.cpp  identifier.cpp  imagliteral.cpp  module.cpp  opcall.cpp  range.cpp  realliteral.cpp  record.cpp  stringliteral.cpp  tuple.cpp  uintliteral.cpp  variable.cpp
backend/src/symbolbuilding/exit/: block.cpp  class.cpp  function.cpp  module.cpp  range.cpp  record.cpp  variable.cpp
backend/test/: CMakeLists.txt  arr.chpl  arr.cpp  arr.cpp.good  arr.hpp.good  cfg.chpl  cond.chpl  expr.chpl  expr.cpp  expr.cpp.good  expr.hpp.good  fn.chpl  fn.cpp  fn.cpp.good  fn.hpp.good  fnc.chpl  fnc.cpp  fnc.cpp.good  fnc.hpp.good  forall.chpl  forall.cpp.good  gups_cpp.chpl  heat.chpl  stream_cpp.chpl  tup.chpl
backend/test/arr/: CMakeLists.txt.good  arr.cpp.good  arr.hpp.good  arr_driver.cpp.good  arr_driver.hpp.good
backend/test/cfg/: CMakeLists.txt.good  cfg.cpp.good  cfg.hpp.good  cfg_driver.cpp.good  cfg_driver.hpp.good
backend/test/cond/: CMakeLists.txt.good  cond.cpp.good  cond.hpp.good  cond_driver.cpp.good  cond_driver.hpp.good
backend/test/expr/: CMakeLists.txt.good  expr.cpp.good  expr.hpp.good  expr_driver.cpp.good  expr_driver.hpp.good
backend/test/fn/: CMakeLists.txt.good  fn.cpp.good  fn.hpp.good  fn_driver.cpp.good  fn_driver.hpp.good
backend/test/fnc/: CMakeLists.txt.good  fnc.cpp.good  fnc.hpp.good  fnc_driver.cpp.good  fnc_driver.hpp.good
backend/test/forall/: CMakeLists.txt.good  forall.cpp.good  forall.hpp.good  forall_driver.cpp.good  forall_driver.hpp.good
backend/test/heat/: CMakeLists.txt  CMakeLists.txt.good  heat.cpp  heat.cpp.good  heat.cpp.lol  heat.hpp  heat.hpp.good  heat_driver.cpp  heat_driver.cpp.good  heat_driver.hpp.good
backend/test/tup/: CMakeLists.txt.good  tup.cpp.good  tup.hpp.good  tup_driver.cpp.good  tup_driver.hpp.good
benchmarks/: README  gups.chpl  heat.chpl  stream_add.chpl
benchmarks/chapel/: gups.chpl  heat.chpl  stream_add.chpl  stream_copy.chpl  stream_scale.chpl  stream_triad.chpl
benchmarks/chplx/: gups.chpl  heat.chpl  stream_add.chpl  stream_copy.chpl  stream_scale.chpl  stream_triad.chpl
cmake/: CHPLX_AddPseudoDependencies.cmake  CHPLX_AddPseudoTargetFolder.cmake  CHPLX_AddTest.cmake  CHPLX_Compile.cmake  CHPLX_Include.cmake  CHPLX_Option.cmake  CHPLX_Utils.cmake  CompareFiles.cmake  FindClangFormat.cmake
frontend/: BUILD_VERSION  CMakeLists.txt  cmake_install.cmake  compile_commands.json
frontend/doc/: CMakeLists.txt
frontend/include/chpl/: CMakeLists.txt
frontend/include/chpl/config/: config.h  config.h.cmake
frontend/include/chpl/framework/: Context.h
frontend/include/chpl/resolution/: scope-types.h
frontend/include/chpl/types/: ClassTypeDecorator.h
frontend/lib/: CMakeLists.txt
frontend/lib/framework/: ID.cpp
frontend/lib/immediates/: CMakeLists.txt
frontend/lib/parsing/: CMakeLists.txt  flex-chpl-lib.cpp  parser-yyerror.h
frontend/lib/resolution/: InitResolver.h  Resolver.cpp  can-pass.cpp  return-type-inference.cpp  scope-queries.cpp  scope-types.cpp
frontend/lib/util/: chplenv.cpp  filesystem.cpp  git-version.cpp  my_aligned_alloc.c  my_strerror_r.c  string-escapes.cpp  subprocess.cpp  terminal.cpp
frontend/test/: CMakeLists.txt
frontend/test/util/: testAssertions.cpp
frontend/util/config/: write-git-sha
frontend/util/linters/: CMakeLists.txt
publications/fall2023/: README  fall2023paper.def  gups.chpl  gups.sh  gups_cpp.chpl  heat.chpl  heat.chpl.bkp  heateqn.chpl  run.sh  stream.chpl  stream.sh  stream_copy.chpl  stream_cpp.chpl  stream_cpp_add.chpl  stream_cpp_copy.chpl  stream_cpp_scale.chpl  stream_cpp_triad.chpl  stream_scale.chpl  stream_triad.chpl
publications/fall2023/gups_cpp/: CMakeLists.txt  gups_cpp.cpp  gups_cpp.hpp  gups_cpp_driver.cpp  gups_cpp_driver.hpp
publications/fall2023/heat_cpp/: CMakeLists.txt  heateqn.cpp  heateqn.hpp  heateqn_driver.cpp  heateqn_driver.hpp
publications/fall2023/stream_add_cpp/: CMakeLists.txt  stream_cpp_add.cpp  stream_cpp_add.hpp  stream_cpp_add_driver.hpp
publications/fall2023/stream_copy_cpp/: CMakeLists.txt  stream_cpp_add_driver.cpp  stream_cpp_copy.cpp  stream_cpp_copy.hpp  stream_cpp_copy_driver.cpp  stream_cpp_copy_driver.hpp  stream_cpp_scale_driver.cpp  stream_cpp_scale_driver.hpp  stream_cpp_triad_driver.cpp  stream_cpp_triad_driver.hpp
publications/fall2023/stream_scale_cpp/: CMakeLists.txt  stream_cpp_scale.cpp  stream_cpp_scale.hpp
publications/fall2023/stream_triad_cpp/: CMakeLists.txt  stream_cpp_triad.cpp  stream_cpp_triad.hpp
test/release/examples/: COMPILER_CALL1.txt  hpx-out.txt
test/release/examples/spec/Arrays/: adecl-assocLiteral.chpl  adecl-assocLiteral.good  (+22 more)
(+343 files in other folders)
